@@ -1,3 +1,12 @@
+2006-12-09  Andreas Røsdal  <andrearo@pvv.ntnu.no>
+
+	* src/Makefile.am:
+	* src/.cvsignore:
+	* src/gnome-sudoku.in:
+	* src/gnome-sudoku:
+	Fix Bug #382057 – assumed paths in python files, by importing
+	pyexecdir into python path.
+
 2006-11-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>
 
 	* src/lib/gnome_sudoku.py: Set F1 to open help contents, 
